@@ -1,7 +1,7 @@
 2008-11-18  Dan Fandrich <dan@coneharvesters.com>
 
 	* libexif/exif-entry.c & configure.ac: use localtime_r when available
-	  to be more thread safe
+	  to make libexif thread safe
 	* po/nl.po: Updated Dutch translation by Erwin Poeze
 	* po/pl.po: Updated Polish translation by Jakub Bogusz
 	* contrib/examples/*: Added a couple of simple example programs
