@@ -1,6 +1,9 @@
 libexif-0.6.x:
   * Updated translations: nl, pl
   * Added some example programs
+  * libexif is now thread safe when the underlying C library is thread safe
+    and when each object allocated by libexif isn't used by more than one
+    thread simultaneously
 
 libexif-0.6.17 (2008-11-06):
   * Updated translations: cs, de, pl, sk, vi
